@@ -1,4 +1,5 @@
 Enjoy toooting! This version includes following improvements and fixes:
+- Auto fetch remote content in conversations!
 - Allowing adding more context of reports
 - Option to disable autoplay gif
 - Hide boosts from users
